@@ -16,6 +16,7 @@ The following list contains all changes to pgAdmin3, as present in cvs.
 </ul>
 <br>
 <ul>
+    <li>2004-03-30 AP   ***  no initial language selection (using system default)
     <li>2004-03-25 AP   ***  Allow initial selection of language "Default"
     <li>2004-03-24 AP        changed font handling to accept exotic weights
     <li>2004-03-17 AP        Updated sources for wx 2.5.1
